@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Removed the deprecated GeoJSON exporters
   * Fixed a bug with `oq engine --run job.ini --exports npz`
   * Fixed the ordering of the IMTs in hazardlib
   * `oq engine --delete-calculation` now aborts the calculation first
